--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,33 @@
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>groupe9.projettp1.ProjetTP1</exec.mainClass>
     </properties>
+    
+    
+    <build>
+<plugins>
+<plugin>
+<artifactId>maven-assembly-plugin</artifactId>
+<version>2.4.1</version>
+<executions>
+ <execution>
+ <phase>package</phase>
+<goals>
+ <goal>single</goal>
+ </goals>
+ </execution>
+</executions>
+ <configuration>
+ <archive>
+ <manifest>
+ <addClasspath>true</addClasspath>
+ <mainClass>org.centrale.projet.objet.TestWoE</mainClass>
+ </manifest>
+ </archive>
+<descriptorRefs>
+ <descriptorRef>jar-with-dependencies</descriptorRef>
+ </descriptorRefs>
+ </configuration>
+</plugin>
+</plugins>
+</build>
 </project>
