--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,7 @@
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>groupe9.projettp1.ProjetTP1</exec.mainClass>
+        <sonar.organization>ecn-info-medev</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 </project>
